<resources>
    <string name="app_name">MyFinPal</string>
    <string name="title_home">Home</string>
    <string name="title_budget">Budget</string>
    <string name="title_new_record">New Record</string>
    <string name="title_update_record">Update Record</string>
    <string name="title_history">History</string>
    <string name="title_configuration">Config</string>
    <string name="budget_menu_food">Food</string>
    <string name="budget_menu_shopping">Shopping</string>
    <string name="budget_menu_health">Health</string>
    <string name="budget_menu_activities">Activities</string>
    <string name="budget_menu_memberships">Memberships</string>
    <string name="budget_menu_service">Service</string>
    <string name="budget_menu_restaurants">Restaurants</string>
    <string name="budget_summary_month">Budget of the month</string>
    <string name="budget_summary_current_budget">Current budget:</string>
    <string name="budget_revenues">Revenues</string>
    <string name="budget_expenditures">Expenditures</string>
    <string name="budget_button">Edit budget</string>

    <string-array name="establishments">
        <item>Netflix</item>
        <item>Amazon Prime</item>
        <item>Disney+</item>
        <item>HBO Max</item>
    </string-array>

    <string-array name="payment_methods">
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>PayPal</item>
        <item>Bank Transfer</item>
        <item>Cash</item>
    </string-array>

    <string-array name="categories">
        <item>Food</item>
        <item>Shopping</item>
        <item>Health</item>
        <item>Activities</item>
        <item>Memberships</item>
        <item>Restaurants</item>
    </string-array>
</resources>