<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/budget_icon"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_new_record"
        android:icon="@drawable/new_record_icon"
        android:title="@string/title_new_record" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_icon"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_configuration"
        android:icon="@drawable/configuration_icon"
        android:title="@string/title_configuration" />

</menu>